--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       content="Web site created using create-react-app"
     />
     
+    <!-- <link rel="stylesheet" href="./styles/all-styles.css">     -->
+
     <title>Daily bits</title>
   </head>
   <body>
