--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
       name="description"
       content="Web site created using create-react-app" />
 
-    <title>Daily bits</title>
+    <link rel="shortcut icon" href="./assets/Logo-DB.png" type="image/x-icon">
+
+    <title>Daily bits aplication</title>
   </head>
   
   <body>
